# Computer-Graphics-Lab

lab1/: OpenGLtest.cpp  实验1.docx  计算机图形学-实验报告模板.docx
lab1/实验一源文件/: lab1.cpp
lab2/: 实验2.docx  计算机图形学-实验报告模板.docx
lab2/Module/: CMakeLists.txt  lab2.cpp
lab2/Module/include/: GLObject.h
lab2/Module/src/: CMakeLists.txt
lab2/src/: GLObject.h  lab2_Bezier.cpp  lab2_mandelbrot.cpp
计算机图形学资料/计算机图形学资料/: CMake使用.docx  ~$机图形学-实验报告模板.docx  ~$计算机图形学实验.pptx  ~WRL0846.tmp  计算机图形学-实验报告模板.docx  计算机图形学实验.pptx
